# OrbitWork

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  deploy.sh  deployed.json  eslint.config.js  hardhat.config.js  index.html  package-lock.json  package.json  reset_git.sh  vite.config.ts
casper_contracts/: README.md
casper_contracts/secureflow/: Cargo.toml  DEPLOY.md
casper_contracts/secureflow/src/: data.rs  error.rs  lib.rs
contracts/: README.md
contracts/interfaces/: ISecureFlow.sol
contracts/modules/: EscrowCore.sol
contracts/orbitwork/: DEPLOY.md  rust-toolchain.toml
contracts/secureflow/: Cargo.toml  DEPLOY.md  Makefile
frontend/: debug-yield.js  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: eoa-balance.tsx  milestone-actions.tsx  navbar.tsx  network-setup-dialog.tsx  wallet-button.tsx
frontend/contexts/: self-verification-context.tsx  web3-context.tsx
frontend/public/: manifest.json
orbitwork-hook/script/: CheckSelectors.s.sol  DeployAll.s.sol  DeployCore.s.sol  DeployHook.s.sol  DeployRealYield.s.sol  DeployTestToken.s.sol  MineHook.s.sol  Swap.s.sol  TestHook.s.sol
orbitwork-hook/src/: EscrowHook.sol  TestToken.sol
public/: manifest.json
scripts/: deploy-token-example.ts
secureflow-hook/: DEPLOYMENT_RESULTS.md
secureflow-hook-temp/: DEPLOY_UNICHAIN.md
secureflow-hook/script/: CreatePool.s.sol
secureflow-hook/src/: EscrowHook.sol
src/: App.tsx  index.css  main.tsx
src/components/: ConnectAccount.tsx  FundAccountButton.tsx  (+5 more)
(+96 files in other folders)
