[package]
name = "secureflow-casper"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
alloc = { version = "0.0.0", package = "rustc-std-workspace-alloc" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
